@@ -8,6 +8,7 @@ Core - General
   - Fixes content blocks, image blocks, module blocks containign whitespace in the name.
   - Minor fix to {cms_filepicker} plugin.
   - Improve the CmsModuleInfo class such that if the module class file is newer it will be loaded.
+  - Now generate the moduleinfo.ini file automatically on intall or upgrade of a module.
 
 CmsJobManager v0.1.1
   - Removed audit statement if there were no jobs to perform.
